CloudFormation/HealthCert.yaml
AWSTemplateFormatVersion: '2010-09-09'
Resources:
  HealthCertNetwork:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      Tags:
        - Key: Name
          Value: HealthCertNetwork

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: Internet_Gateway

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref HealthCertNetwork
      InternetGatewayId: !Ref InternetGateway

  NATEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  Public1a:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  PublicZabbixEIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  NATGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NATEIP.AllocationId
      SubnetId: !Ref PublicSubnet
      Tags:
        - Key: Name
          Value: NAT_Gateway

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: eu-west-1a
      CidrBlock: 10.0.1.0/24
      VpcId: !Ref HealthCertNetwork
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: Subred_Publica

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: eu-west-1b
      CidrBlock: 10.0.2.0/24
      VpcId: !Ref HealthCertNetwork
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: Subred_Publica2

  PrivateSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: eu-west-1a
      CidrBlock: 10.0.3.0/24
      VpcId: !Ref HealthCertNetwork
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: Subred_Privada

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: eu-west-1b
      CidrBlock: 10.0.4.0/24
      VpcId: !Ref HealthCertNetwork
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: Subred_Privada2

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref HealthCertNetwork
      Tags:
        - Key: Name
          Value: PublicRouteTable

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnet2
      RouteTableId: !Ref PublicRouteTable

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref HealthCertNetwork
      Tags:
        - Key: Name
          Value: PrivateRouteTable

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway

  PrivateSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet
      RouteTableId: !Ref PrivateRouteTable

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnet2
      RouteTableId: !Ref PrivateRouteTable

  bastionhostsg:
    Type: AWS::EC2::SecurityGroup
    DependsOn: HealthCertNetwork
    Properties:
      GroupDescription: Permite el acceso por SSH al Bastion Host
      VpcId: !Ref HealthCertNetwork
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: bastionhostsg

  BastionHostInterface1:
    Type: AWS::EC2::NetworkInterface
    Properties:
      SubnetId: !Ref PublicSubnet
      GroupSet:
        - !Ref bastionhostsg
      Tags:
        - Key: Name
          Value: BastionHostInterface1

  BastionHostInterface2:
    Type: AWS::EC2::NetworkInterface
    Properties:
      SubnetId: !Ref PrivateSubnet
      PrivateIpAddress: 10.0.3.5
      GroupSet:
        - !Ref bastionhostsg
      Tags:
        - Key: Name
          Value: BastionHostInterface2

  BastionHost:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0dfdc165e7af15242
      InstanceType: t2.micro
      KeyName: BHKP
      NetworkInterfaces:
        - NetworkInterfaceId: !Ref BastionHostInterface1
          DeviceIndex: 0
        - NetworkInterfaceId: !Ref BastionHostInterface2
          DeviceIndex: 1
      IamInstanceProfile: !Ref CWInstanceProfile
      UserData: !Base64 |
        #!/bin/bash
        sudo yum install git -y
        git clone https://github.com/Kriptyon/TFG.git
        cd CloudFormation
        sudo chmod +x scriptBH.sh
        sudo ./scriptBH.sh

  EIPAssociation1a:
    Type: AWS::EC2::EIPAssociation
    Properties:
      AllocationId: !GetAtt Public1a.AllocationId
      NetworkInterfaceId: !Ref BastionHostInterface1

  ZabbixSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Permite SSH desde el bastion host, trafico HTTP/HTTPS y trafico Zabbix
      VpcId: !Ref HealthCertNetwork
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !GetAtt bastionhostsg.GroupId
        - IpProtocol: tcp
          FromPort: 10050
          ToPort: 10050
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          FromPort: 0
          ToPort: 0
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: Zabbix_Server_SG

  ZabbixServerInterface1:
    Type: AWS::EC2::NetworkInterface
    Properties:
      SubnetId: !Ref PublicSubnet
      GroupSet:
        - !Ref ZabbixSG
      Tags:
        - Key: Name
          Value: ZabbixServerInterface1

  ZabbixServerInterface2:
    Type: AWS::EC2::NetworkInterface
    Properties:
      SubnetId: !Ref PrivateSubnet
      PrivateIpAddress: 10.0.3.10
      GroupSet:
        - !Ref ZabbixSG
      Tags:
        - Key: Name
          Value: ZabbixServerInterface2

  ZabbixServer:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-0607a9783dd204cae
      InstanceType: t2.micro
      KeyName: ZSKP
      NetworkInterfaces:
        - NetworkInterfaceId: !Ref ZabbixServerInterface1
          DeviceIndex: 0
        - NetworkInterfaceId: !Ref ZabbixServerInterface2
          DeviceIndex: 1
      UserData: !Base64 |
        #!/bin/bash
        sudo apt install git -y
        git clone https://github.com/Kriptyon/TFG.git
        cd CloudFormation
        sudo chmod +x SCRIPT-ZABBIX.sh
        sudo ./SCRIPT-ZABBIX.sh

  EIPAssociationZabbix:
    Type: AWS::EC2::EIPAssociation
    Properties:
      AllocationId: !GetAtt PublicZabbixEIP.AllocationId
      NetworkInterfaceId: !Ref ZabbixServerInterface1

  CWInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
        - !Ref CWRole

  CWRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: sts:AssumeRole
      Path: /
      Policies:
        - PolicyName: CloudWatchAgentPolicy
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - logs:PutLogEvents
                  - logs:CreateLogStream
                  - logs:CreateLogGroup
                Resource: "*"

  OutputBastionHostPublicIP:
    Description: Bastion Host Public IP Address
    Value: !GetAtt Public1a.PublicIp
    Export:
      Name: BastionHostPublicIP

  OutputZabbixServerPublicIP:
    Description: Zabbix Server Public IP Address
    Value: !GetAtt PublicZabbixEIP.PublicIp
    Export:
      Name: ZabbixServerPublicIP
